--- a/README.adoc
+++ b/README.adoc
@@ -15,13 +15,8 @@ ifndef::env-github[]
 image::images/Ui.png[width="600"]
 endif::[]
 
-* This is a desktop Address Book application. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
-* It is a Java sample application intended for students learning Software Engineering while using Java as the main programming language.
-* It is *written in OOP fashion*. It provides a *reasonably well-written* code example that is *significantly bigger* (around 6 KLoC)than what students usually write in beginner-level SE modules.
-* What's different from https://github.com/se-edu/addressbook-level3[level 3]:
-** A more sophisticated GUI that includes a list  panel and an in-built Browser.
-** More test cases, including automated GUI testing.
-** Support for _Build Automation_ using Gradle and for _Continuous Integration_ using Travis CI (currently implemented).
+* This is a student management system for teaching assistants. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface).
+* Teaching assistants who have trouble managing their student details, can use this to add, delete, find students. They can also use it to update attendance during each lesson and keep track of each students overall attendance.
 
 == Site Map
 
