--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -4,53 +4,52 @@
 :imagesDir: images
 :stylesDir: stylesheets
 
-AddressBook - Level 4 was developed by the https://se-edu.github.io/docs/Team.html[se-edu] team. +
-_{The dummy content given below serves as a placeholder to be used by future forks of the project.}_ +
-{empty} +
+ConTAct was developed by the https://CS2103-AY1819S1-W13-3 team. 
 We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
 == Project Team
 
-=== John Doe
-image::damithc.jpg[width="150", align="left"]
-{empty}[http://www.comp.nus.edu.sg/~damithch[homepage]] [https://github.com/damithc[github]] [<<johndoe#, portfolio>>]
+=== Andrew Tan
+image::Andrewtan.png[width="150", align="left"]
+{empty}[https://github.com/andrewtanJS[github]]
 
-Role: Project Advisor
-
-'''
-
-=== John Roe
-image::lejolly.jpg[width="150", align="left"]
-{empty}[http://github.com/lejolly[github]] [<<johndoe#, portfolio>>]
-
-Role: Team Lead +
-Responsibilities: UI
+Role: 
+Responsibility:
 
 '''
 
-=== Johnny Doe
-image::yijinl.jpg[width="150", align="left"]
-{empty}[http://github.com/yijinl[github]] [<<johndoe#, portfolio>>]
+=== Cyrus Guo
+image::CyrusGuo.jpg[width="150", align="left"]
+{empty}[http://github.com/cyrusguo[github]]
 
-Role: Developer +
-Responsibilities: Data
-
-'''
-
-=== Johnny Roe
-image::m133225.jpg[width="150", align="left"]
-{empty}[http://github.com/m133225[github]] [<<johndoe#, portfolio>>]
-
-Role: Developer +
-Responsibilities: Dev Ops + Threading
+Role: 
+Responsibilities: 
 
 '''
 
-=== Benson Meier
-image::yl_coder.jpg[width="150", align="left"]
-{empty}[http://github.com/yl-coder[github]] [<<johndoe#, portfolio>>]
+=== Preethi Devarajan
+image::PreethiDevarajan.jpg[width="150", align="left"]
+{empty}[http://github.com/preethi-d[github]]
 
-Role: Developer +
-Responsibilities: UI
+Role: 
+Responsibilities: 
+
+'''
+
+=== Yip Seun Yuen
+image::AlfredYip.jpg[width="150", align="left"]
+{empty}[http://github.com/alyip98[github]]
+
+Role: 
+Responsibilities: 
+
+'''
+
+=== Yogusvi Tewari
+image::YogusviTewari.jpg[width="150", align="left"]
+{empty}[http://github.com/yogtew[github]] [<<johndoe#, portfolio>>]
+
+Role: 
+Responsibilities: 
 
 '''
