--- a/README.adoc
+++ b/README.adoc
@@ -14,8 +14,9 @@ ifndef::env-github[]
 image::images/Ui.png[width="600"]
 endif::[]
 
-This is a student management system for teaching assistants. It has a GUI but most of the user interactions happen using a CLI (Command Line Interface). Teaching assistants who have trouble managing their student details, can use this to add, delete, find students. They can also use it to update attendance during each lesson and keep track of each students overall attendance. Furthermore, they can keep track of their timetable and schedule classes and consultations easily, and even send out emails to all their students. 
-
+* This is a student management system for teaching assistants. It has a GUI but most of the user interactions happen using a Command Line Interface.
+* Teaching assistants who have trouble managing their student details, can use this to add, delete, find students. They can also use it to update attendance during each lesson and keep track of each students overall attendance.
+* Also, this app also allows teaching assistants to keep track of their timetable and schedule classes and consultations easily, and even send out emails to all their students.
 
 == Site Map
 
