--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-conTAct
+= conTAct
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.org/CS2103-AY1819S1-W13-3/main[image:https://travis-ci.org/se-edu/addressbook-level4.svg?branch=master[Build Status]]
