--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -868,7 +868,7 @@ _{More to be added}_
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 1a. The formatting is invalid.
@@ -888,10 +888,13 @@ Use case ends.
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 2a. The list is empty
++
+[none]
+** 2a1. ConTAct shows an error message.
 +
 Use case ends.
 
@@ -905,7 +908,7 @@ Use case ends.
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 1a. The formatting is invalid.
@@ -925,7 +928,7 @@ Use case ends.
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 1a. The parameter is invalid.
@@ -937,6 +940,9 @@ Use case ends.
 
 [none]
 * 2a. The list is empty
++
+[none]
+** 2a1. ConTAct shows an error message.
 +
 Use case ends.
 
@@ -952,7 +958,7 @@ Use case ends.
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 1a. The group is invalid.
@@ -965,8 +971,10 @@ Use case ends.
 [none]
 * 2a. The list is empty
 +
+[none]
+** 2a1. ConTAct shows an error message.
++
 Use case ends.
-
 [none]
 * 3a. The user types in an incorrect input.
 [none]
@@ -991,6 +999,9 @@ Use case ends.
 [none]
 * 2a. The list is empty.
 +
+[none]
+** 2a1. ConTAct shows an error message.
++
 Use case ends.
 
 * 3a. The given index is invalid.
@@ -1010,7 +1021,7 @@ Use case resumes at step 2.
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 1a. The parameter(s) is invalid.
@@ -1032,7 +1043,7 @@ Use case ends.
 +
 Use case ends.
 
-*Extesions*
+*Extensions*
 
 [none]
 * 1a. The group(s) is invalid.
