--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -243,24 +243,22 @@ This section describes some noteworthy details on how certain features are imple
 === Email feature
 ==== Current implementation - Emailing a single student
 
-The email feature is faciliated by Outlook Mail API, since most NUS teaching assistants have an Outlook account. Since the Outlook mail API is a RESTful API, this feature uses the `POST` request to send the email specified in the user-input to the student specified in the user-input.
+The email feature is faciliated by Outlook Mail API, since most NUS teaching assistants have an Outlook account. This API is a RESTful API, made for server-client communication. Since the Outlook mail API is a RESTful API, this feature uses the `POST` request (which requests that the web server accepts the data enclosed in the body of the request message) to send the email specified in the user-input to the student specified in the user-input.
 
 The email command itself takes a few parameters:
 
 e.g `email i/2 s/Attendance poor. b/Your attendance seems to be poor. Is there a problem?`
 
-It fetches the email address of the student at that index, and passes the email `subject` and  email `body` inputted by the user as the `body` of the `POST` request. The `CommandResult` object that is returned by the email command lets the user know if the email address has been successfully send to the person whose index is specified.
+When the user inputs the email in the CLI, the app fetches the email address of the student `index` specified (`i/`) and the subject (`s/`) and body (`b/`) of the email specified. This is converted to JSON, and passed as the `body` of the `POST` request to Outlook. 
+
+The `CommandResult` object that is returned by the email command lets the user know if the email address has been successfully send to the person whose index is specified.
 
 .Component interactions for email command
 image::EmailCommand Sequence Diagram.png[width="800"]
 
-==== Using Outlook's Mail API
+In the `POST` request, a access token is required in order to be able to communicate to the web server, which is `Outlook` in this case. To get this access token from Outlook, a authorization code must be used, which is also provided when applicatoin is registered and authorized under Outlook.
 
-This API is a RESTful API, made for server-client communication.
-
-image::REST api.png[width="800"]
-
-Using the 'POST' request (which requests that the web server accepts the data enclosed in the body of the request message), the users email content/subject is converted to JSON format and forms the body of the email.
+image::UML REST API.png[width="800"]
 
 ==== Future features/implementations - Emailing an entire class/group
 
